Give level children max-width of 100% to fix overflow (#379)
This PR adds `max-width: 100%` to level children allowing their content to wrap within the context of the level component.

--- a/packages/level/src/_level.scss
+++ b/packages/level/src/_level.scss
@@ -13,5 +13,6 @@
 
   > * {
     flex: 0 0 auto;
+    max-width: 100%;
   }
 }
